# kursach_1

./: README.md  pyproject.toml  report.html  report.txt  temp_test_file.xlsx
src/: default_report.txt  main.py  report.txt  reports.py  services.py  utils.py  views.py
tests/: report.txt  test_reports.py  test_services.py  test_utils.py  test_views.py
